--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,8 @@ structopt = "0.2"
 [dev-dependencies]
 proptest = "0.9.0"
 rand_xorshift = "0.1.1"
+criterion = "0.2"
+
+[[bench]]
+name = "solver"
+harness = false
